logs/2022.09.24-15:47:36.log
WARNING:torch.distributed.run:
*****************************************
Setting OMP_NUM_THREADS environment variable for each process to be 1 in default, to avoid your system being overloaded, please further tune the variable for optimal performance in your application as needed. 
*****************************************
Traceback (most recent call last):
Traceback (most recent call last):
Traceback (most recent call last):
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluate.py", line 7, in <module>
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluate.py", line 7, in <module>
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluate.py", line 7, in <module>
Traceback (most recent call last):
Traceback (most recent call last):
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluate.py", line 7, in <module>
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluate.py", line 7, in <module>
Traceback (most recent call last):
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluate.py", line 7, in <module>
Traceback (most recent call last):
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluate.py", line 7, in <module>
Traceback (most recent call last):
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluate.py", line 7, in <module>
            from evaluation import BaseConfig, ModelForEvaluation, DEFAULT_CLASS, print_rank_0from evaluation import BaseConfig, ModelForEvaluation, DEFAULT_CLASS, print_rank_0from evaluation import BaseConfig, ModelForEvaluation, DEFAULT_CLASS, print_rank_0


      File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/__init__.py", line 3, in <module>
      File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/__init__.py", line 3, in <module>
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/__init__.py", line 3, in <module>
from evaluation import BaseConfig, ModelForEvaluation, DEFAULT_CLASS, print_rank_0from evaluation import BaseConfig, ModelForEvaluation, DEFAULT_CLASS, print_rank_0

  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/__init__.py", line 3, in <module>
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/__init__.py", line 3, in <module>
    from evaluation import BaseConfig, ModelForEvaluation, DEFAULT_CLASS, print_rank_0
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/__init__.py", line 3, in <module>
    from evaluation import BaseConfig, ModelForEvaluation, DEFAULT_CLASS, print_rank_0
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/__init__.py", line 3, in <module>
    from evaluation import BaseConfig, ModelForEvaluation, DEFAULT_CLASS, print_rank_0
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/__init__.py", line 3, in <module>
    from .tasks import BaseTask, GenerationTask, MultiChoiceTask, LanguageModelTask
          File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/tasks.py", line 20, in <module>
from .tasks import BaseTask, GenerationTask, MultiChoiceTask, LanguageModelTaskfrom .tasks import BaseTask, GenerationTask, MultiChoiceTask, LanguageModelTask

      File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/tasks.py", line 20, in <module>
from .tasks import BaseTask, GenerationTask, MultiChoiceTask, LanguageModelTask  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/tasks.py", line 20, in <module>

  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/tasks.py", line 20, in <module>
        from .tasks import BaseTask, GenerationTask, MultiChoiceTask, LanguageModelTaskfrom .tasks import BaseTask, GenerationTask, MultiChoiceTask, LanguageModelTask

      File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/tasks.py", line 20, in <module>
from .tasks import BaseTask, GenerationTask, MultiChoiceTask, LanguageModelTask  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/tasks.py", line 20, in <module>

  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/tasks.py", line 20, in <module>
    from .tasks import BaseTask, GenerationTask, MultiChoiceTask, LanguageModelTask
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/tasks.py", line 20, in <module>
    from .metrics import DEFAULT_METRICS
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/metrics.py", line 130
    f.write({"answer":p})
    ^
IndentationError: expected an indented block
            from .metrics import DEFAULT_METRICSfrom .metrics import DEFAULT_METRICSfrom .metrics import DEFAULT_METRICS


        from .metrics import DEFAULT_METRICSfrom .metrics import DEFAULT_METRICS

  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/metrics.py", line 130
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/metrics.py", line 130
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/metrics.py", line 130
                  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/metrics.py", line 130
f.write({"answer":p})
f.write({"answer":p})
f.write({"answer":p})
  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/metrics.py", line 130
from .metrics import DEFAULT_METRICS            
    f.write({"answer":p})
    f.write({"answer":p})
^
^
    ^
    ^
IndentationError^
IndentationErrorIndentationError      File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/metrics.py", line 130
: : IndentationError: IndentationErrorfrom .metrics import DEFAULT_METRICS: expected an indented block
    expected an indented blockexpected an indented block: expected an indented block
expected an indented blockf.write({"answer":p})

  File "/mnt/yrfs/xuyifan/GLM-130B/evaluation/metrics.py", line 130

    
    
^
f.write({"answer":p})
    ^
IndentationErrorIndentationError: : expected an indented blockexpected an indented block

ERROR:torch.distributed.elastic.multiprocessing.api:failed (exitcode: 1) local_rank: 0 (pid: 446750) of binary: /mnt/yrfs/qinkai/miniconda3/envs/largescale/bin/python
Traceback (most recent call last):
  File "/mnt/yrfs/qinkai/miniconda3/envs/largescale/bin/torchrun", line 33, in <module>
    sys.exit(load_entry_point('torch==1.12.0', 'console_scripts', 'torchrun')())
  File "/mnt/yrfs/qinkai/miniconda3/envs/largescale/lib/python3.9/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py", line 345, in wrapper
    return f(*args, **kwargs)
  File "/mnt/yrfs/qinkai/miniconda3/envs/largescale/lib/python3.9/site-packages/torch/distributed/run.py", line 761, in main
    run(args)
  File "/mnt/yrfs/qinkai/miniconda3/envs/largescale/lib/python3.9/site-packages/torch/distributed/run.py", line 752, in run
    elastic_launch(
  File "/mnt/yrfs/qinkai/miniconda3/envs/largescale/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 131, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
  File "/mnt/yrfs/qinkai/miniconda3/envs/largescale/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 245, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
/mnt/yrfs/xuyifan/GLM-130B/evaluate.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2022-09-24_15:47:52
  host      : node15
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 446751)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2022-09-24_15:47:52
  host      : node15
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 446753)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2022-09-24_15:47:52
  host      : node15
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 446754)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[4]:
  time      : 2022-09-24_15:47:52
  host      : node15
  rank      : 4 (local_rank: 4)
  exitcode  : 1 (pid: 446755)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[5]:
  time      : 2022-09-24_15:47:52
  host      : node15
  rank      : 5 (local_rank: 5)
  exitcode  : 1 (pid: 446756)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[6]:
  time      : 2022-09-24_15:47:52
  host      : node15
  rank      : 6 (local_rank: 6)
  exitcode  : 1 (pid: 446757)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[7]:
  time      : 2022-09-24_15:47:52
  host      : node15
  rank      : 7 (local_rank: 7)
  exitcode  : 1 (pid: 446758)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2022-09-24_15:47:52
  host      : node15
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 446750)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
